// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Providers component can toggle providers assets: providers list 1`] = `
Array [
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="HighVoltageElectricitySubstationComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole-double"
          title="HighVoltageElectricitySubstationComplex-icon"
        />
      </div>
      <div>
        <h4>
          Fawley 132 kV Substation - Hants
        </h4>
        <p
          class="text-sm uppercase"
        >
          high voltage electricity substation complex
        </p>
        <p
          class="text-sm"
        >
          E025
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      8
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="OilFiredPowerGenerationComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-regular fa-bolt-lightning"
          title="OilFiredPowerGenerationComplex-icon"
        />
      </div>
      <div>
        <h4>
          East Cowes Power Station
        </h4>
        <p
          class="text-sm uppercase"
        >
          oil fired power generation complex
        </p>
        <p
          class="text-sm"
        >
          E001
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      3
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
]
`;

exports[`Providers component renders error message when one or more providers returns an error: providers with error(s) 1`] = `
Array [
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="HighVoltageElectricitySubstationComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole-double"
          title="HighVoltageElectricitySubstationComplex-icon"
        />
      </div>
      <div>
        <h4>
          Fawley 132 kV Substation - Hants
        </h4>
        <p
          class="text-sm uppercase"
        >
          high voltage electricity substation complex
        </p>
        <p
          class="text-sm"
        >
          E025
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      8
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="p-2 bg-red-900 rounded-md"
  >
    Failed to retrieve asset information for https://www.iow.gov.uk/DigitalTwin#E001
  </li>,
]
`;
